force-app/main/default/objects/Withdrawal_Deposit__c/Withdrawal_Deposit__c.object-meta.xml
<CustomObject>
    <label>Withdrawal Deposit</label>
    <nameField>
        <displayFormat>{000000}</displayFormat>
        <label>Withdrawal_Deposit Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Withdrawals Deposits</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>