force-app/main/default/objects/Withdrawal_Deposit__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipName>Withdrawals_Deposits</relationshipName>
    <type>Lookup</type>
</CustomField>