force-app/main/default/objects/Withdrawal_Deposit__c/fields/Amount_USD_Equiv__c.field-meta.xml
<CustomField>
    <fullName>Amount_USD_Equiv__c</fullName>
    <formula>Amount__c * 

case ( CCY__c ,&apos;USD&apos;,1, 
&apos;EUR&apos;, Account__r.Marketplace_for_EUR_FX_rate__r.FX_Rate_for_MI__r.rate__c , 
&apos;SGD&apos;, Account__r.Marketplace_for_SGD_FX_rate__r.FX_Rate_for_MI__r.rate__c , 
&apos;HKD&apos;, (1/7.8), 
0 
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Amount USD Equiv</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>