force-app/main/default/objects/Withdrawal_Deposit__c/fields/Approval__c.field-meta.xml
<CustomField>
    <fullName>Approval__c</fullName>
    <inlineHelpText>be updated by approval process for all Whidrawal</inlineHelpText>
    <label>Approval</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Approval requested</fullName>
                <default>true</default>
                <label>Approval requested</label>
            </value>
            <value>
                <fullName>Confirmed by Operation</fullName>
            </value>
            <value>
                <fullName>Confirmed by Finance</fullName>
            </value>
            <value>
                <fullName>Rejected</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>