force-app/main/default/objects/Withdrawal_Deposit__c/fields/Bank_Details__c.field-meta.xml
<CustomField>
    <fullName>Bank_Details__c</fullName>
    <formula>&quot;Beneficiary Name:&quot;+&quot; &quot;+Bank_Account__r.Beneficiary_Name__c + BR() +

 &quot;Account:&quot;+&quot; &quot;+Bank_Account__r.Bank_Account_Number__c + BR() +
 &quot;Beneficiary Bank Name:&quot;+&quot; &quot;+Bank_Account__r.Bank_Name__c + BR() +
 &quot;SWIFT:&quot;+&quot; &quot;+Bank_Account__r.SWIFT_Code__c + BR() +
 &quot;IBAN:&quot;+&quot; &quot;+Bank_Account__r.IBan__c + BR() +
 &quot;Country:&quot;+&quot; &quot;+Bank_Account__r.Country__c + BR() +

 &apos;bank details last modified: &apos; + text(Bank_Account__r.LastModifiedDate)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Bank Details</label>
    <type>Text</type>
</CustomField>