force-app/main/default/objects/Withdrawal_Deposit__c/fields/Comments_Bank_Account__c.field-meta.xml
<CustomField>
    <fullName>Comments_Bank_Account__c</fullName>
    <label>Comments Bank Account</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>