force-app/main/default/objects/Withdrawal_Deposit__c/fields/Confirm_receipt__c.field-meta.xml
<CustomField>
    <fullName>Confirm_receipt__c</fullName>
    <label>Confirm receipt</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>