force-app/main/default/objects/Withdrawal_Deposit__c/fields/eWallet__c.field-meta.xml
<CustomField>
    <fullName>eWallet__c</fullName>
    <label>eWallet</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>$Source.Account__c</field>
            <operation>equals</operation>
            <valueField>eWallet__c.Account__c</valueField>
        </filterItems>
        <filterItems>
            <field>$Source.CCY__c</field>
            <operation>equals</operation>
            <valueField>eWallet__c.CCY__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>eWallet__c</referenceTo>
    <relationshipLabel>Withdrawals Deposits</relationshipLabel>
    <relationshipName>Withdrawals_Deposits</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>