force-app/main/default/objects/Withdrawal_Deposit__c/fields/eWallet_Available_Balance__c.field-meta.xml
<CustomField>
    <fullName>eWallet_Available_Balance__c</fullName>
    <formula>eWallet__r.Available_Balance__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>eWallet Available Balance</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>