force-app/main/default/objects/Withdrawal_Deposit__c/fields/eWallet_CCY__c.field-meta.xml
<CustomField>
    <fullName>eWallet_CCY__c</fullName>
    <formula>Text(eWallet__r.CCY__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>eWallet CCY</label>
    <type>Text</type>
</CustomField>