force-app/main/default/objects/Withdrawal_Deposit__c/fields/eWallet_Trustee__c.field-meta.xml
<CustomField>
    <fullName>eWallet_Trustee__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>eWallet Trustee</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>$Source.Account__c</field>
            <operation>equals</operation>
            <valueField>eWallet_Trustee__c.Account__c</valueField>
        </filterItems>
        <filterItems>
            <field>$Source.CCY__c</field>
            <operation>equals</operation>
            <valueField>eWallet_Trustee__c.CCY__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>eWallet_Trustee__c</referenceTo>
    <relationshipLabel>Withdrawals Deposits</relationshipLabel>
    <relationshipName>Withdrawals_Deposits</relationshipName>
    <type>Lookup</type>
</CustomField>