force-app/main/default/objects/Withdrawal_Deposit__c/fields/External_Reference_Number__c.field-meta.xml
<CustomField>
    <fullName>External_Reference_Number__c</fullName>
    <label>External Reference Number</label>
    <length>150</length>
    <type>Text</type>
</CustomField>