force-app/main/default/objects/Withdrawal_Deposit__c/fields/Transaction__c.field-meta.xml
<CustomField>
    <fullName>Transaction__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Transaction</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Transaction__c.Account__c</field>
            <operation>equals</operation>
            <valueField>$Source.Account__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Transaction__c</referenceTo>
    <relationshipLabel>Withdrawals Deposits</relationshipLabel>
    <relationshipName>Withdrawals_Deposits</relationshipName>
    <type>Lookup</type>
</CustomField>