force-app/main/default/objects/Withdrawal_Deposit__c/fields/Trustee__c.field-meta.xml
<CustomField>
    <fullName>Trustee__c</fullName>
    <label>Trustee</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Amicorp Escrow</fullName>
                <default>true</default>
                <label>Amicorp Escrow</label>
            </value>
            <value>
                <fullName>Amicorp Trust</fullName>
            </value>
            <value>
                <fullName>USD</fullName>
                <isActive>false</isActive>
                <label>USD</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>