force-app/main/default/objects/Withdrawal_Deposit__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>70.Deposit</fullName>
                <default>true</default>
                <label>70.Deposit</label>
            </value>
            <value>
                <fullName>80.Withdrawal</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>