force-app/main/default/objects/Withdrawal_Deposit__c/fields/USD_available_eWallet__c.field-meta.xml
<CustomField>
    <fullName>USD_available_eWallet__c</fullName>
    <formula>Account__r.USD_Available_eWallet__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>USD available eWallet</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>