force-app/main/default/objects/Withdrawal_Deposit__c/recordTypes/Amicorp.recordType-meta.xml
<RecordType>
    <fullName>Amicorp</fullName>
    <active>true</active>
    <label>Amicorp</label>
</RecordType>