force-app/main/default/objects/Withdrawal_Deposit__c/validationRules/amount_positive.validationRule-meta.xml
<ValidationRule>
    <fullName>amount_positive</fullName>
    <active>true</active>
    <errorConditionFormula>Amount__c &lt;=0</errorConditionFormula>
    <errorMessage>amount must be +ve.</errorMessage>
</ValidationRule>