force-app/main/default/objects/Withdrawal_Deposit__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Trustee__c</columns>
    <columns>Type__c</columns>
    <columns>Approval__c</columns>
    <columns>Account__c</columns>
    <columns>CCY__c</columns>
    <columns>Amount__c</columns>
    <columns>Status__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>eWallet__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>