force-app/main/default/objects/Withdrawal_Deposit__c/listViews/Not_Processed.listView-meta.xml
<ListView>
    <fullName>Not_Processed</fullName>
    <columns>NAME</columns>
    <columns>Type__c</columns>
    <columns>Account__c</columns>
    <columns>CCY__c</columns>
    <columns>Amount__c</columns>
    <columns>Status__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>eWallet__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Not Processed</value>
    </filters>
    <filters>
        <field>CCY__c</field>
        <operation>notEqual</operation>
        <value>XXX</value>
    </filters>
    <label>Not Processed not XXX</label>
</ListView>