force-app/main/default/objects/Withdrawal_Deposit__c/listViews/Not_Processed_XXX.listView-meta.xml
<ListView>
    <fullName>Not_Processed_XXX</fullName>
    <columns>NAME</columns>
    <columns>Type__c</columns>
    <columns>Account__c</columns>
    <columns>CCY__c</columns>
    <columns>Amount__c</columns>
    <columns>Status__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>eWallet__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CCY__c</field>
        <operation>notContain</operation>
        <value>XXX</value>
    </filters>
    <filters>
        <field>Type__c</field>
        <operation>contains</operation>
        <value>80.Withdrawal</value>
    </filters>
    <filters>
        <field>Status__c</field>
        <operation>notContain</operation>
        <value>Cancelled</value>
    </filters>
    <filters>
        <field>CREATED_DATE</field>
        <operation>greaterThan</operation>
        <value>1/1/2019 12:00 AM</value>
    </filters>
    <label>Withdraws 2019</label>
</ListView>