force-app/main/default/objects/Withdrawal_Deposit__c/listViews/Trustee_e_wallet.listView-meta.xml
<ListView>
    <fullName>Trustee_e_wallet</fullName>
    <columns>NAME</columns>
    <columns>eWallet__c</columns>
    <columns>eWallet_Trustee__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>eWallet_Trustee__c</field>
        <operation>equals</operation>
    </filters>
    <label>Trustee e-wallet</label>
</ListView>